# integra-starter-template

./: .gitignore  Cargo.toml  Dockerfile  main.rs
src/: main.rs  web.rs
src/controllers/: dashboard.rs  mod.rs  page.rs  user.rs
src/routes/: app.rs
src/templates/: _header.html  dashboard.html  layout.html
