[package]
name = "integra_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integra = { version = "0.0.9" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14" }
once_cell = "1.8.0"
tera = "1"
serde_json = "1.0"
diesel = "2.1.0" # no backend features need to be enabled
diesel-async = { version = "0.3.1", features = ["postgres"] }